Header Images now have rounded corners

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ a{
 .header img{
     height: auto;
     width: 250px;
+    border-radius: 10px;
 }
 .header{
     display: flex;
@@ -54,6 +55,10 @@ ul.top-links a:hover{
     justify-content: space-evenly;
     padding: 20px 0px 50px 0px;
     gap: 20px;
+}
+
+.upper_body img{
+    border-radius: 10px;
 }
 
 ul{
