--- a/style.css
+++ b/style.css
@@ -13,12 +13,12 @@ a{
 }
 .header img{
     height: auto;
-    width: 50px;
+    width: 70px;
     border-radius: 10px;
 }
 .header{
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     justify-content: space-around;
     background-color: #1F2937;
     padding-top: 20px;   
